style.css
body {
    /* #F3F9E3 */
    background-image: linear-gradient(180deg, pink, white);
    font-family: monospace, 'Courier New', Courier, monospace;
    color: grey, black;
    /* font-size: larger; */
    word-wrap: break-word;
}

.gallery4 {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-gap: 20px;
}

img, #screenshot{
    max-width: 50vw;
    width: 1fr;
}



#screenshot:hover {
    transform: scale(1.2);
}

h1 {
    font-size: 45px;
    text-transform: uppercase;
    text-align: center;
    color: black;
}

.h3 {
    text-decoration: underline;
    margin-bottom: 0px;
}

.ball {
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 20px;
    border-color: purple;
    border-radius: 50%;
    width: 150px;
    height: 150px;
    background-image: linear-gradient(45deg, #F038FF, #DBFCFF);
}

.card {
    text-align: justify;
    width: 100vw;
    background-image: linear-gradient(45deg, #F038FF, #DBFCFF);
    color: black;

    border-top-width: 10px;
    border-bottom-width: 10px;
    border-style: solid;
    border-color: black;
}

a:hover {
    color: violet;

}

.blog {
    text-align: justify;
}

.oldblog {
    padding: 0 15px;
    margin-top: 50px;
    border-top-style: dashed;
    border-top-width: 10px;
    border-color: grey;
    background: black;
    color: white;
    width: 90%;
    margin: auto;
}

@media (min-width:990px) {
    body {
        /* #F3F9E3 */
        background-image: linear-gradient(180deg, pink, white);
        font-family: monospace, 'Courier New', Courier, monospace;
        color: grey, black;
        margin-left: 25%;
        margin-right: 25%;
        /* font-size: larger; */
        word-wrap: break-word;
    }

    h1 {
        font-size: 45px;
        text-transform: uppercase;
        text-align: center;
        color: black;
    }

    .h3 {
        text-decoration: underline;
        margin-bottom: 0px;
    }

    .ball {
        margin-left: auto;
        margin-right: auto;
        margin-top: 20px;
        margin-bottom: 20px;
        border-color: purple;
        border-radius: 50%;
        width: 150px;
        height: 150px;
        background-image: linear-gradient(45deg, #F038FF, #DBFCFF);
    }

    .card {
        text-align: justify;

        width: 60%;
        padding: 25px 50px 25px 50px;
        margin: auto;

        background-image: linear-gradient(45deg, #F038FF, #DBFCFF);
        color: black;

        border-width: 10px;
        border-style: solid;
        border-color: black;
        border-radius: 20px;
    }

    a:hover {
        color: violet;

    }

    .blog {
        text-align: justify;
    }

    .oldblog {
        padding: 15px;
        margin-top: 50px;
        border-style: dashed;
        border-width: 10px;
        border-color: black;
        color: black;
        width: 75%;
        margin: auto;
    }
}

